// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./FiatValue.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="whitespace-nowrap"
        data-slot="tooltip-trigger"
        id="base-ui-_r_1_"
      >
        <span
          aria-hidden="true"
        >
          $ 1,235
        </span>
        <span
          class="sr-only"
        >
          $ 1,234.56
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./FiatValue.stories LargeValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="whitespace-nowrap"
        data-slot="tooltip-trigger"
        id="base-ui-_r_3_"
      >
        <span
          aria-hidden="true"
        >
          $ 1.23M
        </span>
        <span
          class="sr-only"
        >
          $ 1,234,567.89
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./FiatValue.stories NullValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="text-muted-foreground"
      >
        --
      </span>
    </div>
  </div>
</div>
`;

exports[`./FiatValue.stories NumberValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="whitespace-nowrap"
        data-slot="tooltip-trigger"
        id="base-ui-_r_5_"
      >
        <span
          aria-hidden="true"
        >
          $ 10,000
        </span>
        <span
          class="sr-only"
        >
          $ 9,999.99
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./FiatValue.stories Precise 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="whitespace-nowrap"
      >
        $ 1,234
        <span
          class="text-muted-foreground"
        >
          .57
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./FiatValue.stories SmallValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="whitespace-nowrap"
        data-slot="tooltip-trigger"
        id="base-ui-_r_7_"
      >
        $ 0.00
      </span>
    </div>
  </div>
</div>
`;

exports[`./FiatValue.stories WithMaxLength 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="whitespace-nowrap"
        data-slot="tooltip-trigger"
        id="base-ui-_r_9_"
      >
        <span
          aria-hidden="true"
        >
          $ 123.46M
        </span>
        <span
          class="sr-only"
        >
          $ 123,456,789.12
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./FiatValue.stories ZeroValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="whitespace-nowrap"
        data-slot="tooltip-trigger"
        id="base-ui-_r_b_"
      >
        <span
          aria-hidden="true"
        >
          $ 0
        </span>
        <span
          class="sr-only"
        >
          $ 0.00
        </span>
      </span>
    </div>
  </div>
</div>
`;
